recoll/TODO
Build stops with

--- .obj/advshist.o ---
In file included from advshist.cpp:24:
../query/dynconf.h: In member function 'virtual bool RclSListEntry::decode(const string&)':
../query/dynconf.h:75:9: error: 'base64_decode' was not declared in this scope; did you mean 'rk_base64_decode'?
   75 |         base64_decode(enc, value);
      |         ^~~~~~~~~~~~~
      |         rk_base64_decode
../query/dynconf.h: In member function 'virtual bool RclSListEntry::encode(std::string&)':
../query/dynconf.h:79:9: error: 'base64_encode' was not declared in this scope; did you mean 'rk_base64_encode'?
   79 |         base64_encode(value, enc);
      |         ^~~~~~~~~~~~~
      |         rk_base64_encode
--- .obj/guiutils.o ---
In file included from guiutils.cpp:37:
../query/dynconf.h: In member function 'virtual bool RclSListEntry::decode(const string&)':
../query/dynconf.h:75:9: error: 'base64_decode' was not declared in this scope; did you mean 'rk_base64_decode'?
   75 |         base64_decode(enc, value);
      |         ^~~~~~~~~~~~~
      |         rk_base64_decode
../query/dynconf.h: In member function 'virtual bool RclSListEntry::encode(std::string&)':
../query/dynconf.h:79:9: error: 'base64_encode' was not declared in this scope; did you mean 'rk_base64_encode'?
   79 |         base64_encode(value, enc);
      |         ^~~~~~~~~~~~~
      |         rk_base64_encode
